--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
 	box-sizing: border-box;
 
 	}
+	body{
+		background-color:#D7D7D7;
+	}
 	nav.sticky {
 		position: fixed;
 		top: 0;
@@ -111,132 +114,139 @@
 		cursor: pointer;
 	}
 	
-	#home{
-	 background-color:#D7D7D7;
-	
-	}
-	
-	
-
-	@keyframes slideup{
-	   0%{
-		   transform: translateY(100px);
-	   }
-	   100%{
-		   transform: translateY(0%);
-	   }
-	}
-	
-	@keyframes slideleft{
-		0%{
-			transform: translateX(1000px);
-		}
-		100%{
-			transform: translateX(0%);
-		}
-	 }
-	 
-	#home .image {
+	#home {
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-align: center;
+			-ms-flex-align: center;
+				align-items: center;
+		-ms-flex-wrap: wrap;
+			flex-wrap: wrap;
+		gap: 4rem;
+		min-height: calc(100vh - 6.5rem);
+		
+		
+	  }
+	  
+	  #home .image {
 		-webkit-box-flex: 1;
 			-ms-flex: 1 1 42rem;
 				flex: 1 1 42rem;
 		text-align: center;
-	}
-	
-	#home .image img {
-		height: 60vh;
-		width: 70vh;
+	  }
+	  
+	  #home .image img {
+		height: 40rem;
+		width: 50rem;
 		clip-path: circle();
-		animation:slideleft 2s ease;
-
-	}
-	
-	#home .content {
+	  }
+	  
+	  #home .content {
 		-webkit-box-flex: 1;
 			-ms-flex: 1 1 42rem;
 				flex: 1 1 42rem;
-	}
-
-	.btn1 {
-		height: 10vh;
-		display: inline-block;
-		margin-top: 1rem;
-		border-radius: 5rem;
-		background: rgb(0, 0, 0);
-		padding: .5rem;
-		font-size: 1.2rem;
-		color: #fff;
-		padding-left: 2rem;
-		text-decoration: none;
-		animation:slideup 3 	s ease;
-	
-	}
-	
-	.btn1 i {
-		
-		
-		width: 4rem;
-		line-height: 4rem;
-		font-size: 1.7rem;
-		text-align: center;
-		background: #fff;
-		background: rgb(0, 0, 0);
-		border-radius: 50%;
-		margin-left: 1rem;
-		-webkit-transition: .2s linear;
-		transition: .2s linear;
-	}
-	
-	.btn1:hover i {
-		margin-left: 2rem;
-	}
-	.btn {
-		height: 10vh;
-		display: inline-block;
-		margin-top: 1rem;
-		border-radius: 5rem;
-		background: rgb(0, 0, 0);
-		padding: .5rem;
-		font-size: 1.2rem;
-		color: #fff;
-		padding-left: 2rem;
-		text-decoration: none;
-		
-	}
-	
-	.btn i {
-		
-		
-		width: 4rem;
-		line-height: 4rem;
-		font-size: 1.7rem;
-		text-align: center;
-		background: #fff;
-		background: rgb(0, 0, 0);
-		border-radius: 50%;
-		margin-left: 1rem;
-		-webkit-transition: .2s linear;
-		transition: .2s linear;
-	}
-	
-	.btn:hover i {
-		margin-left: 2rem;
-	}
-	
-	#home .content h3 {
-		color: rgb(255, 0, 0);
-		font-family: papyrus,sans-serif;
-		font-size: 8vh;
+	  }
+	  
+	  #home .content h3 {
+		color: rgb(0, 0, 0);
+		font-size: 4rem;
 		padding-bottom: .5rem;
-		animation:slideup 2.1s ease;
-	}
-
-	
-	
-	
-	
-	
-	
+	  }
+	  
+	  #home .content span {
+		font-size: 3rem;
+		color: crimson;
+		padding: .5rem 0;
+		display: block;
+	  }
+	  
+	  #home .content p {
+		font-size: 1.5rem;
+		color: rgb(23, 7, 255);
+		padding: 1rem 0;
+		line-height: 2;
+	  }
+	  
+	   .btn1 {
+		   height: 10vh;
+		   display: inline-block;
+		   margin-top: 1rem;
+		   border-radius: 5rem;
+		   background: rgb(0, 0, 0);
+		   padding: .5rem;
+		   font-size: 1.2rem;
+		   color: #fff;
+		   padding-left: 2rem;
+		   text-decoration: none;
+		   animation:slideup 3 	s ease;
+	   
+	   }
+	   
+	   .btn1 i {
+		   
+		   
+		   width: 4rem;
+		   line-height: 4rem;
+		   font-size: 1.7rem;
+		   text-align: center;
+		   background: #fff;
+		   background: rgb(0, 0, 0);
+		   border-radius: 50%;
+		   margin-left: 1rem;
+		   -webkit-transition: .2s linear;
+		   transition: .2s linear;
+	   }
+	   
+	   .btn1:hover i {
+		   margin-left: 2rem;
+	   }
+	   .btn {
+		   height: 10vh;
+		   display: inline-block;
+		   margin-top: 1rem;
+		   border-radius: 5rem;
+		   background: rgb(0, 0, 0);
+		   padding: .5rem;
+		   font-size: 1.2rem;
+		   color: #fff;
+		   padding-left: 2rem;
+		   text-decoration: none;
+		   
+	   }
+	   
+	   .btn i {
+		   
+		   
+		   width: 4rem;
+		   line-height: 4rem;
+		   font-size: 1.7rem;
+		   text-align: center;
+		   background: #fff;
+		   background: rgb(0, 0, 0);
+		   border-radius: 50%;
+		   margin-left: 1rem;
+		   -webkit-transition: .2s linear;
+		   transition: .2s linear;
+	   }
+	   
+	   .btn:hover i {
+		   margin-left: 2rem;
+	   }
+	   
+	   /* #home .content h3 {
+		   color: rgb(255, 0, 0);
+		   font-family: papyrus,sans-serif;
+		   font-size: 8vh;
+		   padding-bottom: .5rem;
+		   animation:slideup 2.1s ease;
+	   } */
+   
+	   
+	   
+	   
+	   
+	   
 
 	#about{
 		
@@ -244,7 +254,7 @@
 		margin: 1px 0px;
 		padding: 100px 0px;
 		
-		background-color:#D7D7D7;
+	
 	}
 	#about img{
 		animation:slideleft 2s ease;
@@ -324,11 +334,7 @@
 	
 
 		
-		#education{
-			background-color:#D7D7D7;
 		
-		
-		}
 	
 	#education .box-container {
 		display: -webkit-box;
@@ -390,10 +396,7 @@
 		color: rgb(0, 0, 0);
 		line-height: 2;
 	  }
-	 
-	#service{
-		background-color:#D7D7D7;
-	}
+	
 	
 	#service .box-container{
 		display: flex;
@@ -494,7 +497,7 @@
 
 	#contact{
 		min-height: 100vh;
-		background-color:#D7D7D7;
+		
 	}
 	h1{
 		text-align: center;
