--- a/style.css
+++ b/style.css
@@ -8,6 +8,13 @@
 	body{
 		background-color:#D7D7D7;
 	}
+	@media only screen and (max-width: 900px) {
+		body {
+			background-color:#cbf5b3;
+			width: 50%;
+		}
+	  }
+	  
 	nav.sticky {
 		position: fixed;
 		top: 0;
@@ -149,8 +156,9 @@
 	  }
 	  
 	  #home .content h3 {
+		font-family: papyrus,sans-serif;
 		color: rgb(0, 0, 0);
-		font-size: 4rem;
+		font-size: 5rem;
 		padding-bottom: .5rem;
 	  }
 	  
@@ -233,16 +241,7 @@
 	   .btn:hover i {
 		   margin-left: 2rem;
 	   }
-	   
-	   /* #home .content h3 {
-		   color: rgb(255, 0, 0);
-		   font-family: papyrus,sans-serif;
-		   font-size: 8vh;
-		   padding-bottom: .5rem;
-		   animation:slideup 2.1s ease;
-	   } */
-   
-	   
+	
 	   
 	   
 	   
@@ -384,7 +383,7 @@
 		font-size: 2rem;
 		font-weight: 700;
 		padding: 1rem 0;
-		color: #000000;
+		color: #ff06c9;
 		padding-top: 3rem;
 		font-weight: normal;
 	  }
@@ -396,8 +395,10 @@
 		color: rgb(0, 0, 0);
 		line-height: 2;
 	  }
-	
-	
+	/* #education .box-container.box{
+		color: #e97fb4;
+	}
+	 */
 	#service .box-container{
 		display: flex;
 		align-items: center;
@@ -411,7 +412,7 @@
 		box-shadow:  0 .5rem 1rem rgba(0,0,0,.1);
 		margin:1.5rem;
 		padding:2.5rem;
-		background:linear-gradient(79deg, rgba(255, 71, 87,.2) 50%, #fff 50.1%);
+		background:linear-gradient(79deg, rgba(253, 0, 0, 0.2) 50%, #fff 50.1%);
 		position: relative;
 		z-index: 0;
 		flex:1 1 30rem;
@@ -480,8 +481,8 @@
 			
 		align-items: center;
 		color:rgb(255, 0, 43);
-		font-size:90px;
-		margin-left:170px;
+		font-size:11vh;
+		margin-right: -5vh;
 		
 
 
@@ -491,7 +492,7 @@
 		align-items: center;
 		color:rgb(0, 0, 0);
 		font-size:90px;
-		margin-left:190px;
+		
 		
 	}
 
